# CPSChallenge

./: CMakeLists.txt  LateralMotionControl.fmu
LateralMotionControl/: modelDescription.xml
